Fix stuff on iOS

--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -3,5 +3,5 @@
   margin: 3em 0 0.8em 0;
   font-size: smaller;
   font-family: monospace;
-  opacity: 0.1;
+  color: #333;
 }
