--- a/src/Components/Page/Page.module.css
+++ b/src/Components/Page/Page.module.css
@@ -1,5 +1,4 @@
 .page {
-  height: 100%;
   background-color: #191919;
   color: #ddd;
   letter-spacing: 0.05em;
