--- a/src/Components/TopNav/TopNav.module.css
+++ b/src/Components/TopNav/TopNav.module.css
@@ -43,7 +43,7 @@
 .mainMenu {
   position: absolute;
   z-index: 1000;
-  top: 0;
+  top: 3.6em;
   right: 0;
   background-color: rgba(0, 0, 0, 0.8);;
   background-color: black;
@@ -118,7 +118,7 @@
   display: flex;
   flex-direction: column;
   margin-top: 0.1em;
-  padding: 1em 2em 1em 6em;
+  padding: 1em 1em 1em 1em;
   align-items: flex-end;
 }
 @media (min-width: 900px) {
@@ -133,6 +133,7 @@
 .hamLine {
   display: block;
   width: 1.8em;
+  min-height: 0.18em;
   height: 0.18em;
   margin-bottom: 0.35em;
   position: relative;
@@ -154,12 +155,12 @@
   opacity: 1;
   transform: translate(18%, -0.08em) rotate(45deg);
 }
-.menuTarget:target ~ .sticky .hamLine:nth-child(2),
+.menuTarget:target ~ .sticky .hamLine:nth-child(3),
 .menuOpen .hamLine:nth-child(3) {
   opacity: 0;
   transform: rotate(0deg) scale(0.2, 0.2);
 }
-.menuTarget:target ~ .sticky .hamLine:nth-child(3),
+.menuTarget:target ~ .sticky .hamLine:nth-child(4),
 .menuOpen .hamLine:nth-child(4) {
   opacity: 1;
   transform: translate(18%, 0.08em) rotate(-45deg);
@@ -180,15 +181,18 @@
 }
 
 .backdrop {
+  display: none;
   position: absolute;
   position: fixed;
-  display: block;
-  right: 100%;
   top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   z-index: 998;
   cursor: default;
+}
+.backdrop:active, .backdrop:hover, .backdrop:visited {
+  text-decoration: none;
 }
 
 @media (min-width: 900px) {
@@ -201,5 +205,6 @@
 
 .menuTarget:target ~ .sticky .backdrop,
 .menuOpen .backdrop {
+  display: block;
   right: 0;
 }
